# SecretJack

./: README.md
.github/workflows/: Integration.yml  Static.yml
contract/bank/: Cargo.toml
contract/bank/src/: contract.rs  msg.rs  state.rs
contract/bank/src/contract/: game_msg.rs
contract/game/: Cargo.toml  a.txt
contract/game/src/: contract.rs  msg.rs  state.rs
contract/game/src/contract/: bank_msg.rs
contract/tests/: bank.wasm  game.wasm  integration.ts  package.json  tsconfig.json
gui/: README.md  package-lock.json  package.json
gui/src/components/: App.tsx  Card.tsx  Controls.tsx  Hand.tsx  Hands.tsx  Status.tsx
gui/src/components/styles/: Card.module.css  Controls.module.css  Hand.module.css  Status.module.css
